fixed layout issue

--- a/TheNetNinja_CSS_Grids/project004/styles.css
+++ b/TheNetNinja_CSS_Grids/project004/styles.css
@@ -4,6 +4,7 @@ body {
   margin: 0;
   font-family: 'Poppins';
 }
+
 main {
   display: grid;
   grid-template-columns: 1.2fr 1fr 1fr;
@@ -18,7 +19,8 @@ main {
   color: #323230;
   padding: 30px 60px;
 }
-/* welcome */
+
+/* welcome panel */
 .panel.welcome {
   background: #323230;
   padding: 30px 60px;
@@ -41,7 +43,8 @@ main {
 .panel.welcome footer {
   align-self: end;
 }
-/* about */
+
+/* about panel */
 .panel.about {
   grid-template-rows: 3fr 1fr;
   overflow: hidden;
@@ -50,34 +53,34 @@ main {
   min-height: 100%;
   min-width: 100%;
 }
-/* photography */
-.panel.photography {
-  grid-auto-rows: 1fr 3fr;
+
+/* photos panel */
+.panel.photos {
+  grid-template-rows: 1fr 3fr;
   overflow: hidden;
 }
-
-.panel.photography img {
+.panel.photos img {
   min-height: 100%;
   min-width: 100%;
 }
-/* @media screen and (max-width: 1200px) {
-  .main {
+
+@media screen and (max-width: 1400px) {
+  main {
     grid-template-columns: 1fr 1fr;
   }
-  .panel.photography {
-    grid-template-columns: 1fr 1fr;
+  .panel.photos {
     grid-column: span 2;
+    grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr;
   }
-} */
-
+}
 @media screen and (max-width: 960px) {
   main {
     grid-template-columns: 1fr;
     grid-template-rows: 500px 400px 400px;
   }
   .panel.about {
-    grid-row: span 2;
+    grid-column: span 2;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr;
   }
@@ -85,18 +88,18 @@ main {
     width: 100%;
   }
 }
-
 @media screen and (max-width: 680px) {
   main {
     grid-template-rows: 700px 600px 600px;
   }
   .panel.about,
-  .panel.photography {
+  .panel.photos {
     grid-column: span 1;
     grid-template-columns: 1fr;
     grid-template-rows: 1fr 1fr;
     border-bottom: 1px solid #dcdcd0;
   }
+
   .panel img {
     width: 100%;
   }
